solve usd input amount bug, add password must atleast one symbol, add transition on mobile version, add check url to open login modal

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -38,11 +38,13 @@
       position: absolute;
       top: 0;
       left: 0;
-      transform: translate(5px, -120%);
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: $light-bg;
+
+      & > button {
+        background-color: $light-bg;
+      }
 
       &:focus {
         background-color: $light-bg;
@@ -86,7 +88,6 @@
     .show {
       display: grid;
       grid-template-columns: auto auto;
-      transition: $transition-all;
       padding-top: 10px;
     }
 
